<resources>
    <string name="app_name">LAMP CLIMBING</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_joe_fragment">Hello Joe fragment</string>
    <string name="hello_nils_fragment">Hello Nils fragment</string>

    <string name="title_activity_climb_detail_view">ClimbDetailView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="log_title">title placeholder</string>
    <string name="log_desc">desc placeholder</string>

    <string name="label_grade">Grade</string>
    <string name="label_length">Length</string>
    <string name="button_text_commit">Commit</string>
    <string name="button_text_update">Update</string>
    <string name="button_text_reset">Reset</string>
    <string name="button_text_delete">Delete</string>
    <string name="button_text_go_gps">Show on Map</string>
    <string name="label_title">Title</string>
    <string name="label_desc">Description</string>
    <string name="pick_image">Image: Pick or Capture</string>

    <string name="cameraCaptureTempFilename">key_cameraCaptureTempFilename</string>
    <string name="createLogTitle">key_createTitle</string>
    <string name="createLogDesc">key_createDesc</string>
    <string name="createLogGrade">key_createGrade</string>
    <string name="createLogLength">key_createLength</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Animal">Animal</string>
    <string name="dialog_title_select_animal">Select Animal</string>
    <string name="summary_units">Select which animal to use</string>
    <string name="default_animal">Duck</string>
    <string name="Defaults">Defaults</string>
    <string name="dialog_title_select_default_grade">Default Grade</string>
    <string name="default_grade">4a</string>
    <string name="dialog_title_select_default_length">Default Length</string>
    <string name="default_length">~10m</string>
    <string name="dialog_title_select_default_name">Default Climb Name</string>
    <string name="dialog_title_select_default_desc">Default Description</string>
    <string name="button_az">A-Z</string>
    <string name="button_sort_grade">Grade</string>
    <string name="button_sort_length">Length</string>
    <string name="sort_by">Sort by:</string>
    <string name="button_text_gps">Grab GPS</string>


</resources>
