<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?attr/selectableItemBackground"
    tools:context="nils.and.lamp.app.Fragments.ClimbCreator">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/createlog_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/createlog_image_height"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                tools:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/createlog_title_viewonly"
                android:layout_width="match_parent"
                android:layout_height="@dimen/createlog_title_height"
                android:layout_alignBottom="@+id/createlog_image"
                android:layout_marginLeft="@dimen/md_keylines"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/log_title" />

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/createlog_container_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createlog_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createlog_label_title"
                    style="?android:attr/textAppearance"
                    android:layout_width="@dimen/createlog_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:text="@string/label_title" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/createlog_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/createlog_title_height"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/dark_grey"
                    tools:text="@string/log_title" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/createlog_container_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createlog_container_title">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/createlog_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/createlog_title_height"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/createlog_length"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/createlog_title_height"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/createlog_container_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createlog_container_spinner">

                <TextView
                    android:id="@+id/createlog_label_text"
                    style="?android:attr/textAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:text="@string/label_desc" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/createlog_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/article_subheading"
                    tools:text="@string/log_desc" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/createlog_container_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createlog_container_desc">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/createlog_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/article_subheading"
                    android:layout_weight="1"
                    android:hint="Latitude"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/createlog_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginRight="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/article_subheading"
                    android:layout_weight="1"
                    android:hint="Longitude"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <Button
                android:id="@+id/createlog_commit_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createlog_container_gps"
                android:text="@string/button_text_commit"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/createlog_reset_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createlog_container_gps"
                android:layout_toRightOf="@id/createlog_commit_button"
                android:text="@string/button_text_reset"
                android:textColor="?attr/colorAccent" />
            <Button
                android:id="@+id/createlog_gps_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createlog_container_gps"
                android:layout_toRightOf="@id/createlog_reset_button"
                android:text="@string/button_text_gps"
                android:textColor="?attr/colorAccent" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
